--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "nodemon ./server/api/index.js",
-    "start": "node ./server/api/index.js",
+    "start:dev": "nodemon ./api/index.js",
+    "start": "node ./api/index.js",
     "vercel-build":"echo hello"
   },
   "author": "",
